--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "0.6",
   "permissions": ["contextMenus"],
   "background": {
-    "scripts": ["sample.js"]
+    "scripts": ["conext.js"]
   },
   "manifest_version": 2
 }
