--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,29 @@
   "name": "明道",
   "description": "Shows some of the features of the Context Menus API",
   "version": "0.6",
-  "permissions": ["contextMenus"],
   "background": {
     "scripts": ["conext.js"]
   },
-  "manifest_version": 2
+  "manifest_version": 2,
+  "browser_action": {
+          "default_icon": {              
+            "19": "images/icon.png",           
+            "38": "images/icon.png"          
+          },
+          "default_title": "MD",     
+          "default_popup": "login.html"      
+        },
+	"permissions":[
+		"contextMenus",
+        "https://api.mingdao.com/oauth2/authorize",
+        "tabs"
+    ],
+	"content_scripts":[{
+		 "matches":["https://github.com/robots.txt*"],
+        "js":["libs/injection.js"],
+        "run_at":"document_start"
+    }],
+	"web_accessible_resources":[
+		"assets/*"
+	]
 }
