--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,22 @@
   "name": "明道",
   "description": "Shows some of the features of the Context Menus API",
   "version": "0.6",
-  "permissions": ["contextMenus"],
+  "permissions": ["contextMenus","tabs"],
   "background": {
-    "scripts": ["conext.js"]
-  },
-  "manifest_version": 2
+      "scripts": ["conext.js"]
+   },
+   "browser_action":{
+   		"default_icon":"icon.png",
+   		"default_title":"mingdao",
+   		"default_popup":"menu.html"
+   },
+   "web_accessible_resources":[
+		"assets/*",
+		"js/*"
+	],
+	"content_scripts":[{
+		"matches":["https://github.com/robots.txt*"],
+		"js":["js/content_script.js"]
+	}],
+	"manifest_version": 2
 }
