--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
     ],
 	"content_scripts":[{
 		 "matches":["<all_urls>"],
-        "js":["js/content_script.js"],
+        "js":["js/isload.js","js/content_script.js","js/script.js"],
         "run_at":"document_idle",
 		"all_frames": true
     }],
