--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
 	"content_scripts":[{
 		 "matches":["<all_urls>"],
         "js":["js/isload.js","js/content_script.js","js/script.js"],
-        "run_at":"document_idle",
+        "run_at":"document_end",
 		"all_frames": true
     }],
 	"web_accessible_resources":[
