--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,12 @@
   "description": "Shows some of the features of the Context Menus API",
   "version": "0.6",
   "background": {
-      "scripts": ["js/ajax.js","js/background.js","js/hotkeys.js","js/utils.js"]
+      "scripts": [
+		  "js/ajax.js",
+		  "js/background.js",
+		  "js/hotkeys.js",
+		  "js/utils.js"
+	  ]
    },
   "manifest_version": 2,
   "browser_action": {
@@ -27,8 +32,15 @@
 		 "exclude_globs": [ "http://huaban.com*", "http://www.huaban.com*"],
 		 "include_globs": [ "*" ],
 		 "matches":["<all_urls>"],
-		"css": [ "css/capture.css" ],
-        "js":["js/isload.js","js/content_script.js","js/script.js","js/shortcut.js"],
+		"css": [ "css/capture.css","css/edit.css" ],
+        "js":[
+			"js/isload.js",
+			"js/content_script.js",
+			"js/script.js",
+			"js/shortcut.js",
+			"js/edit.js",
+			"js/upload_ui.js"
+			],
         "run_at":"document_end",
 		"all_frames": true
     }],
@@ -37,6 +49,8 @@
 		"js/*",
 		"libs/*",
 		"images/*",
-		"login.html"
+		"login.html",
+		"share.html"
+
 	]
 }
