--- a/manifest.json
+++ b/manifest.json
@@ -43,7 +43,8 @@
 			"js/shortcut.js",
 			"js/page.js"
 			],
-        "run_at":"document_end"
+        "run_at":"document_end",
+		"all_frames":true
     }],
 	"web_accessible_resources":[
 		"css/*",
