--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
-	"name": "明道",
-	"description": "Shows some of the features of the Context Menus API",
-	"version": "0.6",
+	"name": "快捷分享 - 明道",
+	"description": "使用浏览器扩展插件【快捷分享】一键将网页精彩内容分享到明道，您可以分享网页链接、分享网页精彩图片、分享网页各个区域截图等至明道",
+	"version": "0.9.0",
 	"background": {
 		"scripts": [
 			"js/ajax.js",
@@ -14,7 +14,7 @@
 	"manifest_version": 2,
 	"browser_action": {
 		"default_icon": "images/icon.png",
-		"default_title": "MD",
+		"default_title": "快捷分享 - 明道",
 		"default_popup": "popup.html"
 	},
 	"permissions": [
@@ -56,6 +56,5 @@
 		"login.html",
 		"share.html",
 		"index.html"
-
 	]
 }
