--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 ﻿{
-	"name": "明道",
+	"name": "MindaoShare",
 	"description": "Shows some of the features of the Context Menus API",
 	"version": "0.6",
 	"background": {
