--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
 	"name": "快捷分享 - 明道",
 	"description": "使用浏览器扩展插件【快捷分享】一键将网页精彩内容分享到明道，您可以分享网页链接、分享网页精彩图片、分享网页各个区域截图等至明道",
-	"version": "1.0.0",
+	"version": "1.0.2",
 	"background": {
 		"scripts": [
 			"js/ajax.js",
@@ -45,7 +45,7 @@
 				"js/page.js"
 			],
 			"run_at": "document_end",
-			"all_frames": true
+			"all_frames": false
 		}
 	],
 	"web_accessible_resources": [
